bug-fix collapse

--- a/voto-acessivel/src/styles/collapsebox.css
+++ b/voto-acessivel/src/styles/collapsebox.css
@@ -34,3 +34,7 @@
 .collapse-icon-wrapper.open {
   transform: rotate(180deg);
 }
+
+.collapse-content:not(.expanded) {
+  display: none; /* essencial para leitores de ecrã ignorarem */
+}
